--- a/responsive.html
+++ b/responsive.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header hide">
+    <header class="header">
         <nav>
             <h2 class="nav-title">Hrid<span class="text-primary">o</span>y</h2>
             <ul>
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="about hide">
+        <section class="about">
             <h3 class="section">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
                 simple, clean and slick websites that provide real value to the end user. Thousands of clients have
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </section>
-        <section class="">
+        <section>
             <h3 class="section-title">What I Do</h3>
 
             <div class="skills-container">
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume hide">
+        <section class="resume">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-content">
                 <div>
@@ -156,7 +156,7 @@
 
         </section>
         <!-- Contact Section -->
-        <section class="contact hide">
+        <section class="contact">
             <div class="contact-info">
                 <h3 class="section-title">Let's Connect</h3>
                 <p class="contact-description">Please fill out the form on this section to contact with me or call
